added: flyway for db migration makefile for faster shell command prepared for testing